# pydevmgr_vlt

./: pyproject.toml  setup.py
pydevmgr_vlt/: __init__.py  vltiodev.py
pydevmgr_vlt/base/: __init__.py  register.py  vltdevice.py
pydevmgr_vlt/devices/vltiodev/: __init__.py  cfg.py  ctrl.py  stat.py
pydevmgr_vlt/devices/vltmotor/: __init__.py  cfg.py  ctrl.py  stat.py
pydevmgr_vlt_qt/: vltmotor_plot.py
pydevmgr_vlt_qt/tests/: test_vltmotor_ctrl.py
pydevmgr_vlt_qt/uis/: vltmotor_ctrl_frame.ui
tests/: test1.py  test_home.py  test_home_iodev.py  test_iodev.py
