[tool.poetry]
name = "pydevmgr-vlt"
version = "0.6.a1"
description = "Pydevmgr object for vlt device handling"
authors = ["Sylvain Guieu <sylvain.guieu@univ-grenoble-alpes.fr>"]
readme = "README.md"
packages = [{include = "pydevmgr_vlt"}]

[tool.poetry.dependencies]
python = "^3.7"
pydevmgr-core = {path = "../pydevmgr_core", develop =true}
pydevmgr-ua = "^0.5.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
